add new website from server na

--- a/xem-phim-moi/rua-toi-cho-quy/index.html
+++ b/xem-phim-moi/rua-toi-cho-quy/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             11
+             12
             </dd>
             <br/>
            </dl>
@@ -1787,21 +1787,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/to-am-dia-nguc" title="Tổ Ấm Địa Ngục">
+          <a class="list-top-movie-link" href="/phim-moi/call-boy" title="Call Boy">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/to-am-dia-nguc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/call-boy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tổ Ấm Địa Ngục
+             Call Boy
             </span>
             <span class="list-top-movie-item-en">
-             Hellcome Home
+             Call Boy
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1809,40 +1809,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ca-muc-ham-mat" title="Cá Mực Hầm Mật">
-           <span class="status">
-            HD Vietsub + Thuyết minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ca-muc-ham-mat-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cá Mực Hầm Mật
-            </span>
-            <span class="list-top-movie-item-en">
-             Go Go Squid!
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/toi-frankenstein" title="Tôi, Frankenstein">
+          <a class="list-top-movie-link" href="/phim-moi/sau-5-giay-gap-mat-tran-chien-sinh-tu-bat-dau" title="Sau 5 giây gặp mặt, trận chiến sinh tử bắt đầu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-frankenstein-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sau-5-giay-gap-mat-tran-chien-sinh-tu-bat-dau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tôi, Frankenstein
+             Sau 5 giây gặp mặt, trận chiến sinh tử bắt đầu
             </span>
             <span class="list-top-movie-item-en">
-             I, Frankenstein
+             Deatte 5-byou de Battle, Battle in 5 Seconds After Meeting
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1853,18 +1831,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/last-shoot-out" title="Last Shoot Out">
+          <a class="list-top-movie-link" href="/phim-moi/cam-tam-tua-ngoc" title="Cẩm Tâm Tựa Ngọc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/last-shoot-out-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cam-tam-tua-ngoc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Last Shoot Out
+             Cẩm Tâm Tựa Ngọc
             </span>
             <span class="list-top-movie-item-en">
-             Last Shoot Out
+             The Sword and the Brocade
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hoc-vien-greenhouse-phan-2" title="Học viện Greenhouse (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoc-vien-greenhouse-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Học viện Greenhouse (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Greenhouse Academy (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1875,18 +1875,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xac-chet-bi-an-tren-cau-phan-4" title="Xác Chết Bí Ẩn Trên Cầu (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/hai-than" title="Hải Thần">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xac-chet-bi-an-tren-cau-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hai-than-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xác Chết Bí Ẩn Trên Cầu (Phần 4)
+             Hải Thần
             </span>
             <span class="list-top-movie-item-en">
-             The Bridge - Bron/Broen (Season 4)
+             Emperor of the Sea
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
