add new website from server na

--- a/xem-phim-bo/bung-chay-nao-co-gai-bong-chuyen/index.html
+++ b/xem-phim-bo/bung-chay-nao-co-gai-bong-chuyen/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1650,21 +1650,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nha-cua-ninja" title="Nhà của ninja">
+          <a class="list-top-movie-link" href="/phim-moi/lang-khach-kenshin-3" title="Lãng khách Kenshin">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-cua-ninja-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lang-khach-kenshin-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhà của ninja
+             Lãng khách Kenshin
             </span>
             <span class="list-top-movie-item-en">
-             House of Ninjas
+             Rurouni Kenshin: Origins
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1672,18 +1672,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/con-tin" title="Con Tin">
+          <a class="list-top-movie-link" href="/phim-moi/noi-nay-co-em" title="Nơi Này Có Em">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-tin-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/noi-nay-co-em-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Con Tin
+             Nơi Này Có Em
             </span>
             <span class="list-top-movie-item-en">
-             Hostage: Missing Celebrity
+             Yes! Mr. Fashion
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1694,40 +1694,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tu-khi-gap-em" title="Từ Khi Gặp Em">
+          <a class="list-top-movie-link" href="/phim-moi/duoi-sau-tac-dat-phan-5" title="Dưới sáu tấc đất (Phần 5)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tu-khi-gap-em-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/duoi-sau-tac-dat-phan-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Từ Khi Gặp Em
+             Dưới sáu tấc đất (Phần 5)
             </span>
             <span class="list-top-movie-item-en">
-             High Fidelity
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sau-chien-binh" title="Sáu Chiến Binh">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sau-chien-binh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Sáu Chiến Binh
-            </span>
-            <span class="list-top-movie-item-en">
-             Foxtrot Six
+             Six Feet Under (Season 5)
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1738,18 +1716,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/luke-nguyen-tren-chuyen-tau-bac-nam" title="Luke Nguyễn trên chuyến tàu Bắc Nam">
+          <a class="list-top-movie-link" href="/phim-moi/one-piece-norowareta-seiken" title="One piece: Norowareta seiken">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/luke-nguyen-tren-chuyen-tau-bac-nam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/one-piece-norowareta-seiken-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Luke Nguyễn trên chuyến tàu Bắc Nam
+             One piece: Norowareta seiken
             </span>
             <span class="list-top-movie-item-en">
-             Luke Nguyen's Railway Vietnam
+             One piece: Norowareta seiken
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tehran-phan-2" title="Tehran (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tehran-season-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tehran (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Tehran (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
